--- a/splats/styles.css
+++ b/splats/styles.css
@@ -9,6 +9,12 @@ body {
     background-color: #222222;
 }
 
+#embed-html {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 .superdev {
     color: rgb(37,37,37);
     text-shadow: 0px 1px 1px rgba(250,250,250,0.1);
