--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@
   /* height: 100; */
 
   padding: 20;
+  
+  text-decoration: none;
 
   transition: font-size 1s;
 }
@@ -73,8 +75,12 @@ a {
   color: #e8e8e8;
 
   text-align: center;
-
+  
   padding: 10;
+}
+
+#contact {
+  text-decoration: none;
 }
 
 p {
@@ -95,4 +101,8 @@ p {
 h1,h2,h3,h4,h5,h6 {
   font-family: sans-serif;
   color: #dad8d8;
+}
+
+svg {
+ text-decoration: none; 
 }
