Added post date to posts

--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,12 @@ img {
   color: #dad8d8;
 }
 
+#recentPostDate {
+  font-family: sans-serif;
+  font-size: 15;
+  color: #dad8d8;
+}
+
 h1,h2,h3,h4,h5,h6 {
   font-family: sans-serif;
   color: #dad8d8;
