Changed style to use body instead of not(code)
Should fix issues with extensions adding things.

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-:not(.hljs-keyword):not(.hljs-comment):not(.hljs-number):not(.hljs-string):not(pre):not(code) {
+body {
   background-color: #333333;
 }
 
